Added 'realistic' content
Sourced some images and descriptions from countdown and got AI to write some reviews for products (https://deepai.org/machine-learning-model/text-generator). I probably could have spent more time getting more product variety and filling out the lists more.

--- a/cartstart.html
+++ b/cartstart.html
@@ -40,32 +40,11 @@
         <section class="content"> <!-- 2 Cart List-->
             <div class="cartlist"> <!-- Item Start-->
                 <div>
-                    <img src="img/Curlingrock_small.jpg">
+                    <img src="img/products/toast.webp">
                 </div>
                 <div>
-                    <h3>Cart Suggestion Title</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer id tortor vitae mi suscipit finibus ac at elit. </p>
-                </div>
-                <div>
-                    <img src="img/icons/plus.svg">
-                </div>
-                <div>
-                    <h2>1</h2>
-                </div>
-                <div>
-                    <img src="img/icons/minus.svg" >
-                </div>  
-                <div>
-                    <img src="img/icons/remove.svg" width="32px">
-                </div>
-            </div> <!--Item End-->
-            <div class="cartlist"> <!-- Item Start-->
-                <div>
-                    <img src="img/Curlingrock_small.jpg">
-                </div>
-                <div>
-                    <h3>Cart Suggestion Title</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer id tortor vitae mi suscipit finibus ac at elit. </p>
+                    <h3>Mighty Fresh Toast Bread White</h3>
+                    <p>No Description Avaliable. </p>
                 </div>
                 <div>
                     <img src="img/icons/plus.svg">
@@ -82,32 +61,11 @@
             </div> <!--Item End-->
             <div class="cartlist"> <!-- Item Start-->
                 <div>
-                    <img src="img/Curlingrock_small.jpg">
+                    <img src="img/products/eggs.webp">
                 </div>
                 <div>
-                    <h3>Cart Suggestion Title</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer id tortor vitae mi suscipit finibus ac at elit. </p>
-                </div>
-                <div>
-                    <img src="img/icons/plus.svg">
-                </div>
-                <div>
-                    <h2>1</h2>
-                </div>
-                <div>
-                    <img src="img/icons/minus.svg" >
-                </div>  
-                <div>
-                    <img src="img/icons/remove.svg" width="32px">
-                </div>
-            </div> <!--Item End-->
-            <div class="cartlist"> <!-- Item Start-->
-                <div>
-                    <img src="img/Curlingrock_small.jpg">
-                </div>
-                <div>
-                    <h3>Cart Suggestion Title</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer id tortor vitae mi suscipit finibus ac at elit. </p>
+                    <h3>Frenz Free Range Eggs Dozen Mixed Grade</h3>
+                    <p>No Description Avaliable.  </p>
                 </div>
                 <div>
                     <img src="img/icons/plus.svg">
@@ -124,11 +82,74 @@
             </div> <!--Item End-->
             <div class="cartlist"> <!-- Item Start-->
                 <div>
-                    <img src="img/Curlingrock_small.jpg">
+                    <img src="img/products/milk.png">
                 </div>
                 <div>
-                    <h3>Cart Suggestion Title</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer id tortor vitae mi suscipit finibus ac at elit. </p>
+                    <h3>Meadow Fresh Milk Standard Original</h3>
+                    <p>Milk fresh | meadow fresh original milk is a deliciously creamy and full-bodied family favourite.</p>
+                </div>
+                <div>
+                    <img src="img/icons/plus.svg">
+                </div>
+                <div>
+                    <h2>1</h2>
+                </div>
+                <div>
+                    <img src="img/icons/minus.svg" >
+                </div>  
+                <div>
+                    <img src="img/icons/remove.svg" width="32px">
+                </div>
+            </div> <!--Item End-->
+            <div class="cartlist"> <!-- Item Start-->
+                <div>
+                    <img src="img/products/apples.webp">
+                </div>
+                <div>
+                    <h3>Fresh Produce Apples Jazz</h3>
+                    <p>Jazz™ is a premium everyday apple. Tangy-sweet balanced flavours, crisp, juicy and crunchy.</p>
+                </div>
+                <div>
+                    <img src="img/icons/plus.svg">
+                </div>
+                <div>
+                    <h2>1</h2>
+                </div>
+                <div>
+                    <img src="img/icons/minus.svg" >
+                </div>  
+                <div>
+                    <img src="img/icons/remove.svg" width="32px">
+                </div>
+            </div> <!--Item End-->
+            <div class="cartlist"> <!-- Item Start-->
+                <div>
+                    <img src="img/products/chicken.webp">
+                </div>
+                <div>
+                    <h3>Waitoa Free Range Chicken Whole</h3>
+                    <p>Waitoa chicken marinated and delicately seasoned with manuka honey & rosemary. </p>
+                </div>
+                <div>
+                    <img src="img/icons/plus.svg">
+                </div>
+                <div>
+                    <h2>1</h2>
+                </div>
+                <div>
+                    <img src="img/icons/minus.svg" >
+                </div>  
+                <div>
+                    <img src="img/icons/remove.svg" width="32px">
+                </div>
+            </div> <!--Item End-->
+            <div class="cartlist"> <!-- Item Start-->
+                <div>
+                    <img src="img/products/bananas.webp">
+                </div>
+                <div>
+                    <h3>Fresh Produce Bananas Yellow</h3>
+                    <p>Approx 5-7 medium bananas per 1kg - but actual quantity may vary.</p>
                 </div>
                 <div>
                     <img src="img/icons/plus.svg">
@@ -152,9 +173,10 @@
                 <h3>Price Summary</h3>
             </section>
 
-            <section>  <!-- 2 Price Summary Desc-->
+            <section class="content">  <!-- 2 Price Summary Desc-->
                 
-                <p>Price List idk</p>
+                <p>6 Items - $35.25</p>
+                <p>Total: $35.25</p>
             </section>
 
             <section class="button"> <!-- 3 Continue Guest-->
