--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     
     <main class="home">
         <section class="display">  <!-- Revolving Product Display-->
-            <a href="productpage.html"><img src="img/produce.jpg" width="auto" height="auto"></a>
+            <a href="productpage.html"><img src="img/bannerthing.png" width="auto" height="auto"></a>
             
             <div>
                 <img src="img/icons/left.svg">
