--- a/payment.html
+++ b/payment.html
@@ -62,9 +62,9 @@
 
             <section class="content">  <!-- 2 Price Summary Desc-->
                 
-                <p>Price List idk</p>
-                <p>Continuing as Guest</p>
-                <p>Pick up</p>
+                <p>6 Items - $35.25</p>
+                <p>Pick up Fee - $5.00</p>
+                <p>Total: $40.25</p>
             </section>
 
             <section class="button"> <!-- 3 Complete Order-->
