--- a/productpage.html
+++ b/productpage.html
@@ -29,22 +29,23 @@
     
     <main class="product">
         <section class="contentCentered"> <!-- Product Image-->
-            <img src="img/eggs.png">
+            <img src="img/products/milk.png">
         </section> 
         <section class="productdesc"> <!-- Product Description-->
             <div>
                 <section class="title">
-                    <h3>Product Title</h3>
+                    <h3>Meadow Fresh Milk Standard Original</h3>
                 </section>
             </div>
             <div>
-                <p>Product Description</p>
-                <p>Product Description</p>
-                <p>Product Description</p>
-                <p>Product Description</p>
+                <p>Milk fresh | meadow fresh original milk is a deliciously creamy and full-bodied family favourite.</p>
+                <p>Our milk is full of calcium and protein for healthy bones, teeth and muscles*.</p>
+                <p>Drink it. Sip it. Pour it. Enjoy it!.</p>
+                <p>As part of our ongoing sustainability initiatives to reduce our impact on the environment, all our 1 & 2l milk bottles are made with 30% recycled plastic.</p>
+                <p>*Use original milk as part of a healthy & varied diet.</p>
             </div>
             <div>
-                <h2>$4.20</h2>
+                <h2>$3.10</h2>
             </div>
             <div>
                 <section class="button">
@@ -54,17 +55,17 @@
         </section> 
         <section class="customerpurchased"> <!--  1 Other Customers Purchased-->
             <section class="title">
-                <h3>Other Customers Also Purchased</h3>
+                <h3>Customers Also Purchased</h3>
             </section>
             <section class="suggestlist"> <!-- item start-->
                 <div>
                     <section class="contentCentered">
-                        <img src="img/Curlingrock_small.jpg">
+                        <img src="img/products/apples.webp">
                     </section>
                 </div>
                 <div>
                     <section class="title">
-                        <h3>Product TitleProduct TitleProduct Title</h3>
+                        <h3>Fresh Produce Apples Jazz</h3>
                     </section>
                 </div>
                 <div>
@@ -81,12 +82,12 @@
             <section class="suggestlist"> <!-- item start-->
                 <div>
                     <section class="contentCentered">
-                        <img src="img/Curlingrock_small.jpg">
+                        <img src="img/products/toast.webp">
                     </section>
                 </div>
                 <div>
                     <section class="title">
-                        <h3>Product Title</h3>
+                        <h3>Mighty Fresh Toast Bread White</h3>
                     </section>
                 </div>
                 <div>
@@ -103,12 +104,12 @@
             <section class="suggestlist"> <!-- item start-->
                 <div>
                     <section class="contentCentered">
-                        <img src="img/Curlingrock_small.jpg">
+                        <img src="img/products/pancake.webp">
                     </section>
                 </div>
                 <div>
                     <section class="title">
-                        <h3>Product Title</h3>
+                        <h3>Edmonds Pancake Mix Shaker</h3>
                     </section>
                 </div>
                 <div>
@@ -125,12 +126,12 @@
             <section class="suggestlist"> <!-- item start-->
                 <div>
                     <section class="contentCentered">
-                        <img src="img/Curlingrock_small.jpg">
+                        <img src="img/products/eggs.webp">
                     </section>
                 </div>
                 <div>
                     <section class="title">
-                        <h3>Product Title</h3>
+                        <h3>Frenz Free Range Eggs Dozen</h3>
                     </section>
                 </div>
                 <div>
