--- a/userreviews.html
+++ b/userreviews.html
@@ -40,16 +40,16 @@
         <section class="content"> <!-- 3 List pt 1-->
             <div class="list"> <!-- Item Start-->
                 <div>
-                    <img src="img/Curlingrock_small.jpg">
+                    <img src="img/products/chicken.webp">
                 </div>
                 <div>
                     <section class="title">
-                        <h3>Review Title</h3>
+                        <h3>Waitoa Free Range Chicken Whole</h3>
                     </section>
                 </div>
                 <div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer id tortor vitae mi suscipit finibus ac at elit. </p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer id tortor vitae mi suscipit finibus ac at elit. </p>
+                    <p>5/5 Stars</p>
+                    <p>In my head these two things were all I ever wanted in a chicken, which made me realize that I'd been wrong all along. For decades now I've made all sorts of chicken at home from chicken joints, to food trucks and restaurants. I can think of many things I would love here, but this one is different. Now I've changed my way of cooking, making chicken recipes and so many recipes that I have all of the recipes made that are so relevant to this recipe.</p>
                 </div>
                 <div>
                     <section class="button">
@@ -64,16 +64,16 @@
             </div> <!-- Item End-->
             <div class="list"> <!-- Item Start-->
                 <div>
-                    <img src="img/Curlingrock_small.jpg">
+                    <img src="img/products/slice.webp">
                 </div>
                 <div>
                     <section class="title">
-                        <h3>Review Title</h3>
+                        <h3>Baker Boys Slices Lolly Cake</h3>
                     </section>
                 </div>
                 <div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer id tortor vitae mi suscipit finibus ac at elit. </p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer id tortor vitae mi suscipit finibus ac at elit. </p>
+                    <p>5/5 Stars</p>
+                    <p>Love this cake. I love this cake because it is a keeper (and that's how I use to give it a thumbs up) as well as because you can eat it everyday. Love it. </p>
                 </div>
                 <div>
                     <section class="button">
@@ -88,16 +88,16 @@
             </div> <!-- Item End-->
             <div class="list"> <!-- Item Start-->
                 <div>
-                    <img src="img/Curlingrock_small.jpg">
+                    <img src="img/products/pancake.webp">
                 </div>
                 <div>
                     <section class="title">
-                        <h3>Review Title</h3>
+                        <h3>Edmonds Pancake Mix Shaker</h3>
                     </section>
                 </div>
                 <div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer id tortor vitae mi suscipit finibus ac at elit. </p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer id tortor vitae mi suscipit finibus ac at elit. </p>
+                    <p>5/5 Stars</p>
+                    <p>I would recommend it to anyone who likes this variety. I would take my first four or five of these pancakes and put them down for you to try…if you have the brain. </p>
                 </div>
                 <div>
                     <section class="button">
@@ -115,16 +115,17 @@
         <section class="content"> <!-- 4 List pt 2-->
             <div class="list"> <!-- Item Start-->
                 <div>
-                    <img src="img/Curlingrock_small.jpg">
+                    <img src="img/products/vegan.webp">
                 </div>
                 <div>
                     <section class="title">
-                        <h3>Review Title</h3>
+                        <h3>Quorn Vegetarian Meat & Soy Free Mince</h3>
                     </section>
                 </div>
                 <div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer id tortor vitae mi suscipit finibus ac at elit. </p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer id tortor vitae mi suscipit finibus ac at elit. </p>
+                    <p>4/5 Stars</p>
+                    <p>The whole point in any of this is that it would be okay if you never ate real meat. The only question here is if you love it or if you have some other vegetarian taste buds; just love the taste that comes in your meat or meat substitutes. Enjoy </p>
+
                 </div>
                 <div>
                     <section class="button">
@@ -139,16 +140,16 @@
             </div> <!-- Item End-->
             <div class="list"> <!-- Item Start-->
                 <div>
-                    <img src="img/Curlingrock_small.jpg">
+                    <img src="img/products/v.webp">
                 </div>
                 <div>
                     <section class="title">
-                        <h3>Review Title</h3>
+                        <h3>V Vitalise Energy Drink</h3>
                     </section>
                 </div>
                 <div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer id tortor vitae mi suscipit finibus ac at elit. </p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer id tortor vitae mi suscipit finibus ac at elit. </p>
+                    <p>4/5 Stars </p>
+                    <p>I tried an energy drink on my birthday last year and found it was full of flavor and not overpowering. I've been drinking it the past few days now and only started using it because I am a little tired of eating things I can't drink. And I am only using it on my birthday.</p>
                 </div>
                 <div>
                     <section class="button">
@@ -163,16 +164,16 @@
             </div> <!-- Item End-->
             <div class="list"> <!-- Item Start-->
                 <div>
-                    <img src="img/Curlingrock_small.jpg">
+                    <img src="img/products/apples.webp">
                 </div>
                 <div>
                     <section class="title">
-                        <h3>Review Title</h3>
+                        <h3>Fresh Produce Apples Jazz</h3>
                     </section>
                 </div>
                 <div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer id tortor vitae mi suscipit finibus ac at elit. </p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer id tortor vitae mi suscipit finibus ac at elit. </p>
+                    <p>3/5 Stars</p>
+                    <p>So fresh, we can see we have plenty of that. But, not a ripeness because we are fresh. We see that we have, what we had was ripe. So, not the type of apple you see now.</p>
                 </div>
                 <div>
                     <section class="button">
