--- a/recommended.html
+++ b/recommended.html
@@ -40,16 +40,15 @@
         <section class="content"> <!-- 3 List pt 1-->
             <div class="list"> <!-- Item Start-->
                 <div>
-                    <img src="img/Curlingrock_small.jpg">
+                    <img src="img/products/toast.webp">
                 </div>
                 <div>
                     <section class="title">
-                        <h3>Cart Suggestion Title</h3>
+                        <h3>Basic Essentials</h3>
                     </section>
                 </div>
                 <div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer id tortor vitae mi suscipit finibus ac at elit. </p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer id tortor vitae mi suscipit finibus ac at elit. </p>
+                    <p>A pre-made cart to re-stock the essentials.</p>
                 </div>
                 <div>
                     <section class="button">
@@ -65,16 +64,15 @@
             </div> <!-- Item End-->
             <div class="list"> <!-- Item Start-->
                 <div>
-                    <img src="img/Curlingrock_small.jpg">
+                    <img src="img/products/vegan.webp">
                 </div>
                 <div>
                     <section class="title">
-                        <h3>Cart Suggestion Title</h3>
+                        <h3>Vegan Essentials</h3>
                     </section>
                 </div>
                 <div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer id tortor vitae mi suscipit finibus ac at elit. </p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer id tortor vitae mi suscipit finibus ac at elit. </p>
+                    <p>A pre-made cart to re-stock the Vegan essentials.</p>
                 </div>
                 <div>
                     <section class="button">
@@ -90,16 +88,15 @@
             </div> <!-- Item End-->
             <div class="list"> <!-- Item Start-->
                 <div>
-                    <img src="img/Curlingrock_small.jpg">
+                    <img src="img/products/eggs.webp">
                 </div>
                 <div>
                     <section class="title">
-                        <h3>Cart Suggestion Title</h3>
+                        <h3>Fortnight Shop</h3>
                     </section>
                 </div>
                 <div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer id tortor vitae mi suscipit finibus ac at elit. </p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer id tortor vitae mi suscipit finibus ac at elit. </p>
+                    <p>A larger shop that should last a fortnight.</p>
                 </div>
                 <div>
                     <section class="button">
@@ -118,16 +115,15 @@
         <section class="content"> <!-- 4 List pt 2-->
             <div class="list"> <!-- Item Start-->
                 <div>
-                    <img src="img/Curlingrock_small.jpg">
+                    <img src="img/products/apples.webp">
                 </div>
                 <div>
                     <section class="title">
-                        <h3>Cart Suggestion Title</h3>
+                        <h3>Fruit & Vegetables</h3>
                     </section>
                 </div>
                 <div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer id tortor vitae mi suscipit finibus ac at elit. </p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer id tortor vitae mi suscipit finibus ac at elit. </p>
+                    <p>A selection of Fruit & Veg to add to your cart.</p>
                 </div>
                 <div>
                     <section class="button">
@@ -143,16 +139,15 @@
             </div> <!-- Item End-->
             <div class="list"> <!-- Item Start-->
                 <div>
-                    <img src="img/Curlingrock_small.jpg">
+                    <img src="img/products/chicken.webp">
                 </div>
                 <div>
                     <section class="title">
-                        <h3>Cart Suggestion Title</h3>
+                        <h3>Family Cart</h3>
                     </section>
                 </div>
                 <div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer id tortor vitae mi suscipit finibus ac at elit. </p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer id tortor vitae mi suscipit finibus ac at elit. </p>
+                    <p>A larger cart aimed at feeding a group of 4.</p>
                 </div>
                 <div>
                     <section class="button">
@@ -168,16 +163,15 @@
             </div> <!-- Item End-->
             <div class="list"> <!-- Item Start-->
                 <div>
-                    <img src="img/Curlingrock_small.jpg">
+                    <img src="img/products/slice.webp">
                 </div>
                 <div>
                     <section class="title">
-                        <h3>Cart Suggestion Title</h3>
+                        <h3>Sweet Tooth</h3>
                     </section>
                 </div>
                 <div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer id tortor vitae mi suscipit finibus ac at elit. </p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer id tortor vitae mi suscipit finibus ac at elit. </p>
+                    <p>A collection of top rated desserts and lollies.</p>
                 </div>
                 <div>
                     <section class="button">
